--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "test": "node_modules/.bin/jest --passWithNoTests"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
-    "@react-navigation/stack": "^6.2.3",
+    "@react-navigation/stack": "^6.0.12",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "expo": "^46.0.9",
@@ -24,17 +23,18 @@
     "expo-font": "~10.2.0",
     "expo-updates": "~0.14.5",
     "global": "^4.4.0",
-    "jest": "^29.0.1",
+    "jest": "^26.6.3",
     "moment": "^2.29.4",
+    "native-base": "^3.4.13",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-gesture-handler": "~2.6.0",
-    "react-native-reanimated": "~2.10.0",
-    "react-native-safe-area-context": "4.3.3",
-    "react-native-screens": "~3.17.0",
-    "react-native-svg": "13.1.0",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.18.8",
@@ -60,7 +60,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "18.0.0"
   },
   "prettier": {
     "trailingComma": "all",
