--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "tabWidth": 2,
     "semi": false,
     "singleQuote": true,
-    "bracketSpacing": true
+    "bracketSpacing": true,
+    "printWidth": 120
   },
   "husky": {
     "hooks": {
